m4_include([m4/libpoco.m4])


AC_PREREQ([2.59])

AC_INIT([zipextractionmodule], [4.0.0])

AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.10 foreign no-define])


AC_CONFIG_SRCDIR([ZipExtractionModule.cpp])

AC_CONFIG_HEADERS([config.h])

AC_PROG_CXX


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.



LT_INIT([disable-static])

AC_SUBST([ZIPEXTRACTIONMODULE_SO_VERSION], [4:0:0])

AC_SUBST([ZIPEXTRACTIONMODULE_API_VERSION], [4.0.0])

AC_OUTPUT(Makefile)
